<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <!-- Login form -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay">

        <LinearLayout style="@style/LoginFormContainer"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/logoImageView"
                android:longClickable="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/loginicon"
                android:layout_marginTop="50dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_name_lowercase"
                android:id="@+id/AppNameTextView"
                android:layout_gravity="center_horizontal"
                android:autoText="false"
                android:gravity="center"
                android:textColor="@color/timecards_font_color"
                android:textSize="34dp"
                android:textIsSelectable="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <EditText
                    android:layout_width="179dp"
                    android:layout_height="40dp"
                    android:id="@+id/company"
                android:hint="@string/web_address"
                    android:inputType="text|textNoSuggestions"
                android:background="@drawable/formtextfield"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:textSize="16dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/email"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:password="false"
                android:background="@drawable/formtextfield"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:textSize="16dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/formtextfield"
                android:paddingLeft="20dp"
                android:textSize="16dp"
                android:paddingRight="20dp" />

            <Button android:id="@+id/sign_in_button"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/greenbtn"
                android:textColor="#ffffff" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="50dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sign_up_button"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:layout_marginLeft="0dp"
                        android:background="#0000"
                        android:text="@string/sign_up"
                        android:textColor="@color/timecards_font_color"
                        android:onClick="onSignUp"
                        android:gravity="center_vertical"
                        android:layout_margin="15dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/reset_password_button"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:textColor="@color/timecards_font_color"
                        android:alpha="1"
                        android:background="#0000"
                        android:text="@string/reset_password"
                        android:gravity="center_vertical"
                        android:layout_margin="15dp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </ScrollView>
</merge>
