<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:background="@color/black_overlay"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/LoginFormContainer"
        android:paddingTop="50dp">

        <EditText
            android:layout_width="179dp"
            android:layout_height="40dp"
            android:id="@+id/web_address_text"
            android:hint="@string/web_address"
            android:inputType="text|textNoSuggestions"
            android:background="@drawable/formtextfield"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:textSize="16dp"
            android:paddingRight="20dp" />

        <EditText
            android:layout_width="179dp"
            android:layout_height="40dp"
            android:id="@+id/email_text"
            android:hint="@string/prompt_email"
            android:inputType="text|textNoSuggestions"
            android:background="@drawable/formtextfield"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:textSize="16dp"
            android:paddingRight="20dp" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="179dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/greenbtn"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>